stop leaking the login1 suspend job

BUG: 316473
FIXED-IN: 4.10.2